--- a/ioos_service_monitor/templates/services.html
+++ b/ioos_service_monitor/templates/services.html
@@ -5,32 +5,34 @@
     <table class="table table-striped table-bordered table-condensed">
         <thead>
             <tr>
-                <th>status</th>
                 <th>name</th>
+                <th>type</th>
                 <th>url</th>
                 <th>last updated (utc)</th>
-                <th>actions</th>
+                <th>response time (ms)</th>
+                <th>weekly avg response time (ms)</th>
+                <th>status</th>
             </tr>
         </thead>
+        {%- for service_group in services|groupby('tld') %}
         <tbody>
-        {%- for service in services %}
-            <tr>
-                <td>-</td>
-                <td>{{ service.name }}</td>
-                <td>{{ service.url }}</td>
-                <td>{{ service.updated | datetimeformat }}</td>
-                <td>
-                  <a class="btn" href="{{ url_for('show_service', service_id=service._id) }}">View</a>
-                  <a class="btn" href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a>
-                  <a class="btn" href="{{ url_for('start_monitoring_service', service_id=service._id) }}">Start Monitoring</a>
-                  <form method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
-                    <input type="submit" class="btn btn-danger" value="Delete" />
-                    <!--<a href="{{ url_for('delete_service', service_id=service._id) }}">Delete</a>-->
-                  </form>
-                </td>
+            <tr class="info">
+              <td colspan="6">{{ service_group.grouper }}</td>
+              <td>{{ tld_stats[service_group.grouper]['ok'] }}/{{ tld_stats[service_group.grouper]['total'] }}</td>
             </tr>
-        {%- endfor %}
+            {%- for service in service_group.list %}
+            <tr>
+                <td><a href="{{ url_for('show_service', service_id=service._id) }}">{{ service.name }}</a></td>
+                <td>{{ service.service_type }}</td>
+                <td><a href="{{ service.url }}">{{ service.url }}</a></td>
+                <td>{{ service.last_update | datetimeformat }}</td>
+                <td>{{ service.last_response_time }}</td>
+                <td>{{ service.avg_response_time | float | round }}</td>
+                <td>{{ service.last_operational_status | status_icon | safe }}</td>
+            </tr>
+            {%- endfor %}
          </tbody>
+        {%- endfor %}
     </table>
 
     <div>
