--- a/ioos_service_monitor/templates/show_service.html
+++ b/ioos_service_monitor/templates/show_service.html
@@ -8,9 +8,8 @@
 <a class="btn" href="{{ url_for('show_service', service_id=service._id) }}">View</a>
 <a class="btn" href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a>
 <a class="btn" href="{{ url_for('start_monitoring_service', service_id=service._id) }}">Start Monitoring</a>
-<form method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
+<form class="form-inline" method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
   <input type="submit" class="btn btn-danger" value="Delete" />
-  <!--<a href="{{ url_for('delete_service', service_id=service._id) }}">Delete</a>-->
 </form>
 
 <hr />
@@ -24,6 +23,7 @@
   </dl>
 </div>
 
+<h3>Last 15 Responses</h3>
 <table>
   <thead>
     <tr>
