Always show UTC in the daily emails

--- a/ioos_service_monitor/templates/daily_service_report.html
+++ b/ioos_service_monitor/templates/daily_service_report.html
@@ -2,7 +2,7 @@
 
 {% block page %}
 
-<p>The following services experienced failures during the period of <strong>{{ start_time | datetimeformat }}</strong> to <strong>{{ end_time | datetimeformat }}</strong>.</p>
+<p>The following services experienced failures during the period of <strong>{{ start_time | datetimeformat }} (UTC)</strong> to <strong>{{ end_time | datetimeformat }} (UTC)</strong>.</p>
 
 <table class="table table-striped table-bordered table-condensed" style="font-size:11px">
   <thead>
