--- a/ioos_service_monitor/templates/services.html
+++ b/ioos_service_monitor/templates/services.html
@@ -2,6 +2,8 @@
 
 {% block page %}
 
+<div class="container">
+
     <h3><a href="{{ url_for('services') }}">Services</a></h3>
 
     <div>
@@ -117,5 +119,7 @@
         });
       });
     </script>
+
+</div>
 
 {% endblock %}
