--- a/ioos_service_monitor/templates/show_service.html
+++ b/ioos_service_monitor/templates/show_service.html
@@ -2,73 +2,77 @@
 
 {% block page %}
 
-<h3><a href="{{ url_for('services') }}">Services</a> &#187; {{ service.name }}</h3>
+<div class="container">
 
-<div id="admin-controls" class="well">
-  <form class="form-inline" style="float: right;" method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
-    <input type="submit" class="btn btn-danger" value="Delete" />
-  </form>
-  <a class="btn" href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a>
-  {% if not service.job_id %}
-  <a class="btn" href="{{ url_for('start_monitoring_service', service_id=service._id) }}">Start Monitoring</a>
-  {% else %}
-  <a class="btn btn-success" href="{{ url_for('stop_monitoring_service', service_id=service._id) }}">Stop Monitoring</a>
-  {% endif %}
-  <a class="btn btn-warning" style="float: right; margin-right: 5px;" href="{{ url_for('edit_service', service_id=service._id) }}">Edit</a>
-</div>
+  <h3><a href="{{ url_for('services') }}">Services</a> &#187; {{ service.name }}</h3>
 
-<hr />
+  <div id="admin-controls" class="well">
+    <form class="form-inline" style="float: right;" method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
+      <input type="submit" class="btn btn-danger" value="Delete" />
+    </form>
+    <a class="btn" href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a>
+    {% if not service.job_id %}
+    <a class="btn" href="{{ url_for('start_monitoring_service', service_id=service._id) }}">Start Monitoring</a>
+    {% else %}
+    <a class="btn btn-success" href="{{ url_for('stop_monitoring_service', service_id=service._id) }}">Stop Monitoring</a>
+    {% endif %}
+    <a class="btn btn-warning" style="float: right; margin-right: 5px;" href="{{ url_for('edit_service', service_id=service._id) }}">Edit</a>
+  </div>
 
-<div class="row">
-  <dl class="dl-horizontal col-lg-8">
-    <dt>Name</dt>
-    <dd>{{ service.name }}</dd>
-    <dt>Service ID</dt>
-    <dd>{{ service.service_id }}</dd>
-    <dt>Provider</dt>
-    <dd><a href="{{ url_for("services", filter_provider=service.data_provider, filter_type='null') }}">{{ service.data_provider }}</a></dd>
-    <dt>Type</dt>
-    <dd><a href="{{ url_for("services", filter_provider='null', filter_type=service.service_type) }}">{{ service.service_type }}</a></dd>
-    <dt>URL</dt>
-    <dd>{{ service.url }}</dd>
-    <dt>Contact(s)</dt>
-    <dd>{{ service.contact | default('None',true) }}</dd>
-    <dt>Source Metadata URL</dt>
-    <dd>{{ service.metadata_url }}</dd>
+  <hr />
 
-  </dl>
-  <dl class="dl-horizontal col-lg-4">
-    <dt>Monitoring</dt>
-    <dd>{{ "<span class=\"label label-success\">YES</span>" | safe if service.job_id else "<span class=\"label label-important\">NO</span>" | safe }}</dd>
-    <dt>Interval</dt>
-    <dd>{{ service.interval }}</dd>
-  </dl>
-</div>
+  <div class="row">
+    <dl class="dl-horizontal col-lg-8">
+      <dt>Name</dt>
+      <dd>{{ service.name }}</dd>
+      <dt>Service ID</dt>
+      <dd>{{ service.service_id }}</dd>
+      <dt>Provider</dt>
+      <dd><a href="{{ url_for("services", filter_provider=service.data_provider, filter_type='null') }}">{{ service.data_provider }}</a></dd>
+      <dt>Type</dt>
+      <dd><a href="{{ url_for("services", filter_provider='null', filter_type=service.service_type) }}">{{ service.service_type }}</a></dd>
+      <dt>URL</dt>
+      <dd>{{ service.url }}</dd>
+      <dt>Contact(s)</dt>
+      <dd>{{ service.contact | default('None',true) }}</dd>
+      <dt>Source Metadata URL</dt>
+      <dd>{{ service.metadata_url }}</dd>
 
-<h4>Last Week of Responses</h4>
-<table class="table table-striped table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Response Time (ms)</th>
-      <th>Response Code</th>
-      <th>Status</th>
-      <th>Timestamp</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for s in stats %}
-    <tr{{ " class=error" if s.operational_status == 0 }}>
-        <td>{{ s.response_time }}</td>
-        <td>{{ s.response_code }}</td>
-        <td>{{ s.operational_status | status_icon | safe }} {{ "UP" if s.operational_status else "DOWN" }}</td>
-        <td>{{ s.created | datetimeformat }}</td>
+    </dl>
+    <dl class="dl-horizontal col-lg-4">
+      <dt>Monitoring</dt>
+      <dd>{{ "<span class=\"label label-success\">YES</span>" | safe if service.job_id else "<span class=\"label label-important\">NO</span>" | safe }}</dd>
+      <dt>Interval</dt>
+      <dd>{{ service.interval }}</dd>
+    </dl>
+  </div>
+
+  <h4>Last Week of Responses</h4>
+  <table class="table table-striped table-bordered table-condensed">
+    <thead>
+      <tr>
+        <th>Response Time (ms)</th>
+        <th>Response Code</th>
+        <th>Status</th>
+        <th>Timestamp</th>
       </tr>
-    {% endfor %}
-  </tbody>
-  <tfoot>
-    <tr>
-      <td colspan="4">Avg: {{ avg_response_time | round(2) }}</td>
-  </tfoot>
-</table>
+    </thead>
+    <tbody>
+      {% for s in stats %}
+      <tr{{ " class=error" if s.operational_status == 0 }}>
+          <td>{{ s.response_time }}</td>
+          <td>{{ s.response_code }}</td>
+          <td>{{ s.operational_status | status_icon | safe }} {{ "UP" if s.operational_status else "DOWN" }}</td>
+          <td>{{ s.created | datetimeformat }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="4">Avg: {{ avg_response_time | round(2) }}</td>
+    </tfoot>
+  </table>
+
+</div>
 
 {% endblock %}
