--- a/ioos_service_monitor/templates/services.html
+++ b/ioos_service_monitor/templates/services.html
@@ -2,9 +2,13 @@
 
 {% block page %}
 
-<div class="container">
+<div class="jumbotron">
+  <div class="container">
+    <h3><a href="/">IOOS Catalog</a> &#187; <a href="{{ url_for('services') }}">Services</a></h3>
+  </div>
+</div>
 
-    <h3><a href="{{ url_for('services') }}">Services</a></h3>
+<div class="container">
 
     <div>
       <span>
