--- a/ioos_service_monitor/static/css/ism-style.css
+++ b/ioos_service_monitor/static/css/ism-style.css
@@ -6,8 +6,62 @@ tr.hilite>td {
 svg text.first {
   -webkit-filter: blur(2px); filter: url(#blur-effect-1);
   opacity: 0.9;
+  stroke: white;
+  stroke-width: 5;
 }
 
 svg text {
   cursor: pointer;
+}
+
+svg .map path {
+  fill: #FFFADC;
+  stroke: #D6D1BE;
+  stroke-width: 1;
+}
+
+svg .ioos path {
+  fill: #EF7825;
+}
+
+/* override some bootstrap colors/styles */
+
+.btn-success {
+  background-color: #FFA855;
+  border-color: #EF7825;
+}
+
+.btn-success:hover {
+  background-color: #FFCF8D;
+  border-color: #FFA855;
+}
+
+.jumbotron {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  border-bottom: 5px solid #9fabb7;
+  background-color: #C6D4E1;
+}
+
+.jumbotron h1, .jumbotron h3 {
+  color: #ffffff;
+  margin-top: 10px;
+}
+
+.jumbotron a {
+  color: white;
+}
+
+.jumbotron a:hover {
+}
+
+.well {
+  background-color: #C6D4E1;
+}
+
+a {
+  color: #567EBB;
+}
+
+.service-type-btn {
 }
