--- a/ioos_service_monitor/templates/index.html
+++ b/ioos_service_monitor/templates/index.html
@@ -95,8 +95,9 @@
 
 </div>
 
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="http://d3js.org/queue.v1.min.js"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}" /></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}" /></script>
 
 <script type="text/javascript">
 
