--- a/ioos_service_monitor/templates/layout.html
+++ b/ioos_service_monitor/templates/layout.html
@@ -8,6 +8,7 @@
     {% endblock %}
     {% block css %}
     <link rel=stylesheet type=text/css href="{{ url_for('.static', filename='css/bootstrap.min.css') }}"></link>
+    <link rel=stylesheet type=text/css href="{{ url_for('.static', filename='css/graph.css') }}"></link>
     <link rel=stylesheet type=text/css href="{{ url_for('.static', filename='css/ism-style.css') }}"></link>
     {% endblock %}
   </head>
