--- a/ioos_service_monitor/templates/services.html
+++ b/ioos_service_monitor/templates/services.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h3><a href="/">IOOS Catalog</a> &#187; <a href="{{ url_for('services') }}">Services</a></h3>
+    <h3> <a href="{{ url_for('services') }}">Services</a><br/><small><a href="/">IOOS Catalog</a></small></h3>
   </div>
 </div>
 
