--- a/ioos_service_monitor/templates/show_service.html
+++ b/ioos_service_monitor/templates/show_service.html
@@ -2,25 +2,38 @@
 
 {% block page %}
 
-<div class="container">
-
-  <h3><a href="{{ url_for('services') }}">Services</a> &#187; {{ service.name }}</h3>
-
-  <div id="admin-controls" class="well">
-    <form class="form-inline" style="float: right;" method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
-      <input type="submit" class="btn btn-danger" value="Delete" />
+<div class="jumbotron">
+  <div class="container">
+    <div class="btn-group" style="float: right; margin-top: 10px;">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+        Admin <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu pull-right">
+        <li><a href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a></li>
+        <li><a href="{{ url_for('edit_service', service_id=service._id) }}">Edit</a></li>
+        <li class="divider"></li>
+        <li>
+          {% if not service.job_id %}
+            <a id="start-monitoring-link" href="#">Start Monitoring</a>
+          {% else %}
+            <a id="stop-monitoring-link" href="#">Stop Monitoring</a>
+          {% endif %}
+        </li>
+        <li><a href="#" id="delete-link">Delete</a></li>
+      </ul>
+    </div>
+    <form id="start-monitoring-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('start_monitoring_service', service_id=service._id) }}">
     </form>
-    <a class="btn" href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a>
-    {% if not service.job_id %}
-    <a class="btn" href="{{ url_for('start_monitoring_service', service_id=service._id) }}">Start Monitoring</a>
-    {% else %}
-    <a class="btn btn-success" href="{{ url_for('stop_monitoring_service', service_id=service._id) }}">Stop Monitoring</a>
-    {% endif %}
-    <a class="btn btn-warning" style="float: right; margin-right: 5px;" href="{{ url_for('edit_service', service_id=service._id) }}">Edit</a>
+    <form id="stop-monitoring-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('stop_monitoring_service', service_id=service._id) }}">
+    </form>
+    <form id="delete-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
+    </form>
+
+    <h3><a href="{{ url_for('show_service', service_id=service._id) }}">{{ service.name }}</a><br/><small><a href="/">IOOS Catalog &#187; <a href="{{ url_for('services') }}">Services</a></small></h3>
   </div>
+</div>
 
-  <hr />
-
+<div class="container">
   <div class="row">
     <dl class="dl-horizontal col-lg-8">
       <dt>Name</dt>
@@ -48,6 +61,17 @@
   </div>
 
   <h4>Last Week of Responses</h4>
+  <div>
+    <div id="y_axis">
+
+    </div>
+    <div id="pings">
+
+    </div>
+  </div>
+
+  <br/>
+
   <table class="table table-striped table-bordered table-condensed">
     <thead>
       <tr>
@@ -59,7 +83,7 @@
     </thead>
     <tbody>
       {% for s in stats %}
-      <tr{{ " class=error" if s.operational_status == 0 }}>
+      <tr{{ " class=danger" if s.operational_status == 0 }}>
           <td>{{ s.response_time }}</td>
           <td>{{ s.response_code }}</td>
           <td>{{ s.operational_status | status_icon | safe }} {{ "UP" if s.operational_status else "DOWN" }}</td>
@@ -74,5 +98,53 @@
   </table>
 
 </div>
+
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}" /></script>
+
+<script type="text/javascript">
+
+var pingData = {{ ping_data | tojson }};
+
+$(function() {
+
+  var width = 1100,
+      height = 50;
+
+  var graph = new Rickshaw.Graph({
+    element: $('#pings')[0],
+    width: width,
+    height: height,
+    renderer: 'bar',
+    series: [{data:pingData.good, color:'#C6D4E1'}, {data:pingData.bad, color:'#d9534f'}]
+  });
+
+  var y_ticks = new Rickshaw.Graph.Axis.Y( {
+    graph: graph,
+    orientation: 'left',
+    tickFormat: Rickshaw.Fixtures.Number.formatKMBT,
+    tickValues: [0, 200, 400, 600],
+    element: $('#y_axis')[0]
+  });
+
+  graph.render();
+
+  $('#start-monitoring-link').on('click', function() {
+    $('#start-monitoring-form').submit();
+    event.preventDefault();
+  });
+  $('#stop-monitoring-link').on('click', function() {
+    $('#stop-monitoring-form').submit();
+    event.preventDefault();
+  });
+  $('#delete-link').on('click', function() {
+    if (confirm("Are you sure you want to delete this service?")) {
+      $('#delete-form').submit();
+    };
+    event.preventDefault();
+  });
+});
+
+</script>
 
 {% endblock %}
