--- a/ioos_service_monitor/templates/services.html
+++ b/ioos_service_monitor/templates/services.html
@@ -1,35 +1,37 @@
 {% extends "layout.html" %}
 
 {% block jumbo %}
+<div class="row">
+  <div class="col-lg-6">
     <h3> <a href="{{ url_for('services') }}">Services</a><br/><small><a href="/">IOOS Catalog</a></small></h3>
+  </div>
+    <form class="form-inline">
+    <div class="col-lg-3">
+      <label for="filter-provider">By Provider</label>
+      <select name="filter-provider" class="form-control">
+        <option value="null">-</option>
+        {%- for provider in providers|sort %}
+        <option>{{ provider }}</option>
+        {%- endfor %}
+      </select>
+    </div>
+    <div class="col-lg-3">
+      <label for="filter-type">By Type</label>
+      <select name="filter-type" class="form-control">
+        <option value="null">-</option>
+        <option>WMS</option>
+        <option>DAP</option>
+        <option>WCS</option>
+        <option>SOS</option>
+      </select>
+    </div>
+  </form>
+</div>
 {% endblock %}
 
 {% block page %}
 
 <div class="container">
-
-    <div>
-      <span>
-        By Provider:
-        <select name="filter-provider">
-          <option value="null">-</option>
-          {%- for provider in providers|sort %}
-          <option>{{ provider }}</option>
-          {%- endfor %}
-        </select>
-      </span>
-      <span>
-        By Type:
-        <select name="filter-type">
-          <option value="null">-</option>
-          <option>WMS</option>
-          <option>DAP</option>
-          <option>WCS</option>
-          <option>SOS</option>
-        </select>
-      </span>
-    </div>
-
     <table class="table table-striped table-bordered table-condensed" style="font-size: 11px;">
         <thead>
             <tr>
