--- a/ioos_service_monitor/templates/show_service.html
+++ b/ioos_service_monitor/templates/show_service.html
@@ -9,13 +9,19 @@
   </button>
   <ul class="dropdown-menu pull-right">
     <li><a href="{{ url_for('ping_service', service_id=service._id) }}">Ping</a></li>
+    <li><a href="{{ url_for('harvest_service', service_id=service._id) }}">Harvest</a></li>
     <li><a href="{{ url_for('edit_service', service_id=service._id) }}">Edit</a></li>
     <li class="divider"></li>
     <li>
-      {% if not service.job_id %}
+      {% if not service.ping_job_id %}
         <a id="start-monitoring-link" href="#">Start Monitoring</a>
       {% else %}
         <a id="stop-monitoring-link" href="#">Stop Monitoring</a>
+      {% endif %}
+      {% if not service.harvest_job_id %}
+        <a id="start-harvesting-link" href="#">Start Harvesting</a>
+      {% else %}
+        <a id="stop-harvesting-link" href="#">Stop Harvesting</a>
       {% endif %}
     </li>
     <li><a href="#" id="delete-link">Delete</a></li>
@@ -24,6 +30,10 @@
 <form id="start-monitoring-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('start_monitoring_service', service_id=service._id) }}">
 </form>
 <form id="stop-monitoring-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('stop_monitoring_service', service_id=service._id) }}">
+</form>
+<form id="start-harvesting-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('start_harvesting_service', service_id=service._id) }}">
+</form>
+<form id="stop-harvesting-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('stop_harvesting_service', service_id=service._id) }}">
 </form>
 <form id="delete-form" class="form-inline" style="float: right;" method="POST" action="{{ url_for('delete_service', service_id=service._id) }}">
 </form>
@@ -36,7 +46,7 @@
 
 <div class="container">
   <div class="row">
-    <dl class="dl-horizontal col-lg-8">
+    <dl class="dl-horizontal col-lg-9">
       <dt>Name</dt>
       <dd>{{ service.name }}</dd>
       <dt>Service ID</dt>
@@ -53,11 +63,19 @@
       <dd>{{ service.metadata_url }}</dd>
 
     </dl>
-    <dl class="dl-horizontal col-lg-4">
+    <dl class="dl-horizontal col-lg-3">
       <dt>Monitoring</dt>
-      <dd>{{ "<span class=\"label label-success\">YES</span>" | safe if service.job_id else "<span class=\"label label-important\">NO</span>" | safe }}</dd>
+      <dd>{{ "<span class=\"label label-success\">YES</span>" | safe if service.ping_job_id else "<span class=\"label label-danger\">NO</span>" | safe }}</dd>
       <dt>Interval</dt>
       <dd>{{ service.interval }}</dd>
+
+      <br />
+      <dt>Harvesting</dt>
+      <dd>{{ "<span class=\"label label-success\">YES</span>" | safe if service.harvest_job_id else "<span class=\"label label-danger\">NO</span>" | safe }}</dd>
+      {%- for d in datasets %}
+      <dt>{{ d._id }}</dt>
+      <dd>{{ d.count }}</dd>
+      {%- endfor %}
     </dl>
   </div>
 
@@ -141,6 +159,14 @@ $(function() {
   });
   $('#stop-monitoring-link').on('click', function() {
     $('#stop-monitoring-form').submit();
+    event.preventDefault();
+  });
+  $('#start-harvesting-link').on('click', function() {
+    $('#start-harvesting-form').submit();
+    event.preventDefault();
+  });
+  $('#stop-harvesting-link').on('click', function() {
+    $('#stop-harvesting-form').submit();
     event.preventDefault();
   });
   $('#delete-link').on('click', function() {
