--- a/ioos_service_monitor/templates/show_dataset.html
+++ b/ioos_service_monitor/templates/show_dataset.html
@@ -30,7 +30,25 @@
     <dl class="dl-horizontal col-lg-4">
         <h4>Services</h4>
         {%- for s in dataset.services %}
-        <dt><a href="{{ url_for('show_service', service_id=s['service_id']) }}">{{ s['service_type'] }}</a></dt>
+        <a data-toggle="modal" href="#{{s['service_id']}}" class="btn btn-primary">{{ s['service_type'] }} - {{ s['metadata_type'] }}</a>
+        <div class="modal fade" id="{{s['service_id']}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">{{ s['metadata_type'] }}</h4>
+              </div>
+              <div class="model-body">
+                <textarea style="border:none; width: 100%; height: 400px;">
+                  {{ s['metadata_value'] | safe }}
+                </textarea>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
         {%- endfor %}
     </dl>
   </div>
